<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <Button
            android:id="@+id/clickButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_clicks" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="name"
                android:hint="@string/enter_your_name"
                android:inputType="text" />

            <Button
                android:id="@+id/updateNameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/update" />

        </LinearLayout>

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/label_text"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/rollDice"
            style="@style/label_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_dice" />

        <ImageView
            android:id="@+id/diceImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dice_rolling_result"
            android:src="@drawable/empty_dice" />

        <Button
            android:id="@+id/rollDiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll_dice" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>